<resources>

    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Button">button</string>
    <string name="login_Text">login</string>
    <string name="login_Name">login name</string>
    <string name="password_Hint">password</string>
    <string name="password_Text">password</string>
    <string name="dialog_message">do you want to finish the activity?</string>
    <string name="dialog_title">continue Activity?</string>
    <string name="OK">@android:string/ok</string>
    <string name="CANCEL">@android:string/cancel</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch">What does this do?</string>
    <string name="StartChat">Start Chat</string>
    <string name="Send">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="dialog_title2">Do you want to go back?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="new_message">New Message</string>
    <string name="TestToolbar">Test Toolbar</string>
    <string name="One">One</string>
    <string name="Two">Two</string>
    <string name="Three">Three</string>
    <string name="Weather">Weather</string>
    <string name="currentTemp">Current temperature</string>
    <string name="minTemp">Minimum temperature</string>
    <string name="maxTemp">Maximum temperature</string>
    <string name="pickCity">Pick a city</string>
    <string name="fragment_second">cdcdv</string>


    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">v</string>
    <string name="fragment_first">cdcv</string>
    <string name="first_fragment_label">v</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="cities">
        <item>Abbotsford</item>

        <item>Alert</item>

        <item>Amherst</item>

        <item>Amos</item>

        <item>Antigonish</item>

        <item>Arctic Bay</item>

        <item>Argentia</item>

        <item>Arviat</item>

        <item>Athabasca</item>

        <item>Atikokan</item>

        <item>Attawapiskat</item>

        <item>Baddeck</item>

        <item>Baie-Comeau</item>

        <item>Baker Lake</item>

        <item>Banff</item>

        <item>Barrie</item>

        <item>Bathurst</item>

        <item>Belleville</item>

        <item>Berens River</item>

        <item>Big Beaverhouse</item>

        <item>Biggar</item>

        <item>Brandon</item>

        <item>Brochet</item>

        <item>Brockville</item>

        <item>Brooks</item>

        <item>Buchans</item>

        <item>Burns Lake</item>

        <item>Burwash Landing</item>

        <item>Calgary</item>

        <item>Cambridge Bay</item>

        <item>Campbell River</item>

        <item>Camrose</item>

        <item>Cap-Chat</item>

        <item>Cape Dorset</item>

        <item>Cartwright</item>

        <item>Cat Lake</item>

        <item>Channel-Port aux Basques</item>

        <item>Chapleau</item>

        <item>Charlottetown</item>

        <item>Chesterfield Inlet</item>

        <item>Chicoutimi</item>

        <item>Chilliwack</item>

        <item>Churchill</item>

        <item>Cobalt</item>

        <item>Cochrane</item>

        <item>Coral Harbour</item>

        <item>Corner Brook</item>

        <item>Cornwall</item>

        <item>Courtenay</item>

        <item>Cranbrook</item>

        <item>Creston</item>

        <item>Dauphin</item>

        <item>Dawson Creek</item>

        <item>Dease Lake</item>

        <item>Deer Lake</item>

        <item>Deer Lake</item>

        <item>Digby</item>

        <item>Dolbeau</item>

        <item>Drummondville</item>

        <item>Dryden</item>

        <item>Eastmain</item>

        <item>Edmonton</item>

        <item>Edmundston</item>

        <item>Ennadai</item>

        <item>Flin Flon</item>

        <item>Fort Chipewyan</item>

        <item>Fort Good Hope</item>

        <item>Fort McMurray</item>

        <item>Fort McPherson</item>

        <item>Fort Nelson</item>

        <item>Fort Resolution</item>

        <item>Fort Saint John</item>

        <item>Fort Severn</item>

        <item>Fort Simpson</item>

        <item>Fort Smith</item>

        <item>Forteau Bay</item>

        <item>Fredericton</item>

        <item>Gander</item>

        <item>Gaspe</item>

        <item>Geraldton</item>

        <item>Gillam</item>

        <item>Gimli</item>

        <item>Gjoa Haven</item>

        <item>Grande Prairie</item>

        <item>Grise Fiord</item>

        <item>Halifax</item>

        <item>Hall Beach</item>

        <item>Hamilton</item>

        <item>Happy Valley</item>

        <item>Hay River</item>

        <item>Hearst</item>

        <item>Hinton</item>

        <item>Holman</item>

        <item>Hopedale</item>

        <item>Hudson Bay</item>

        <item>Igloolik</item>

        <item>Inukjuak</item>

        <item>Inuvik</item>

        <item>Iqaluit</item>

        <item>Island Lake</item>

        <item>Ivujivik</item>

        <item>Jasper</item>

        <item>Joliette</item>

        <item>Kamloops</item>

        <item>Kangirsuk</item>

        <item>Kapuskasing</item>

        <item>Kelowna</item>

        <item>Kenora</item>

        <item>Kimmirut</item>

        <item>Kindersley</item>

        <item>Kingston</item>

        <item>Kitchener</item>

        <item>Kugluktuk</item>

        <item>Kuujjuaq</item>

        <item>La Ronge</item>

        <item>La Sarre</item>

        <item>La Scie</item>

        <item>Lac La Biche</item>

        <item>Lake Louise</item>

        <item>Lansdowne House</item>

        <item>Lethbridge</item>

        <item>Lillooet</item>

        <item>Little Current</item>

        <item>Liverpool</item>

        <item>London</item>

        <item>Lutselke</item>

        <item>Lynn Lake</item>

        <item>Marathon</item>

        <item>Matagami</item>

        <item>Meadow Lake</item>

        <item>Medicine Hat</item>

        <item>Melville</item>

        <item>Mingan</item>

        <item>Moncton</item>

        <item>Mont-Laurier</item>

        <item>Montreal</item>

        <item>Moose Jaw</item>

        <item>Moosonee</item>

        <item>Nain</item>

        <item>Nanaimo</item>

        <item>Natashquan</item>

        <item>Nelson House</item>

        <item>Nelson</item>

        <item>New Bella Bella</item>

        <item>New Glasgow</item>

        <item>New Liskeard</item>

        <item>Nipigon</item>

        <item>Norman Wells</item>

        <item>North Battleford</item>

        <item>North Bay</item>

        <item>Norway House</item>

        <item>Orangeville</item>

        <item>Orillia</item>

        <item>Oshawa</item>

        <item>Ottawa</item>

        <item>Owen Sound</item>

        <item>Oxford House</item>

        <item>Pangnirtung</item>

        <item>Parry Sound</item>

        <item>Paulatuk</item>

        <item>Peace River</item>

        <item>Pembroke</item>

        <item>Penticton</item>

        <item>Peterborough</item>

        <item>Pond Inlet</item>

        <item>Port Hardy</item>

        <item>Port Hope Simpson</item>

        <item>Port-Menier</item>

        <item>Powell River</item>

        <item>Prince Albert</item>

        <item>Prince George</item>

        <item>Prince Rupert</item>

        <item>Pukatawagan</item>

        <item>Quabec</item>

        <item>Quesnel</item>

        <item>Radisson</item>

        <item>Rankin Inlet</item>

        <item>Red Deer</item>

        <item>Red Lake</item>

        <item>Regina</item>

        <item>Repulse Bay</item>

        <item>Resolute</item>

        <item>Revelstoke</item>

        <item>Rigolet</item>

        <item>Rimouski</item>

        <item>Riviere-du-Loup</item>

        <item>Rouyn-Noranda</item>

        <item>Saint Anthony</item>

        <item>Saint John</item>

        <item>Saint Johns</item>

        <item>Saint-Augustin</item>

        <item>Saint-Georges</item>

        <item>Saint-Jerome</item>

        <item>Salluit</item>

        <item>Sandspit</item>

        <item>Sarnia</item>

        <item>Saskatoon</item>

        <item>Schefferville</item>

        <item>Selkirk</item>

        <item>Sept-iles</item>

        <item>Shamattawa</item>

        <item>Shawinigan-Sud</item>

        <item>Shelburne</item>

        <item>Sherbrooke</item>

        <item>Smithers</item>

        <item>Steinbach</item>

        <item>Stephenville</item>

        <item>Stettler</item>

        <item>Stony Rapids</item>

        <item>Sudbury</item>

        <item>Swift Current</item>

        <item>Sydney</item>

        <item>Taloyoak</item>

        <item>Terrace</item>

        <item>The Pas</item>

        <item>Thessalon</item>

        <item>Thompson</item>

        <item>Thunder Bay</item>

        <item>Timmins</item>

        <item>Tofino</item>

        <item>Toronto</item>

        <item>Trepassey</item>

        <item>Trois-Rivieres</item>

        <item>Trout River</item>

        <item>Tsiigehtchic</item>

        <item>Tuktoyaktuk</item>

        <item>Uranium City</item>

        <item>Val-dOr</item>

        <item>Vancouver</item>

        <item>Vegreville</item>

        <item>Victoria</item>

        <item>Victoriaville</item>

        <item>Waterloo</item>

        <item>Watson Lake</item>

        <item>Wawa</item>

        <item>West Dawson</item>

        <item>Wetaskiwin</item>

        <item>Weyburn</item>

        <item>Whitehorse</item>

        <item>Wiarton</item>

        <item>Williams Lake</item>

        <item>Windsor</item>

        <item>Windsor</item>

        <item>Winnipeg</item>

        <item>Yarmouth</item>

        <item>Yellowknife</item>

        <item>Yorkton</item>

    </string-array>


</resources>