<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:rowCount="2"
    android:columnCount="2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/colorAccent"
    tools:context=".ListItemsActivity">
    <RadioButton
        android:id="@+id/radioButton"
        android:text="@string/RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />
    <CheckBox
        android:id="@+id/checkBox"
        android:text="@string/CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />
    <Switch
        android:id="@+id/switch1"
        android:text="@string/Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:onClick="onClickImage"
        app:srcCompat="@android:drawable/ic_menu_camera" />


</GridLayout>