<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherForecast">
    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/black"
        android:textSize="@android:dimen/app_icon_size" />

    <Spinner
        android:id="@+id/CityPicker"
        android:text="@string/pickCity"
        android:layout_width="140dp"
        android:layout_height="85dp"/>
    <ImageView
        android:id="@+id/currentWeather"
        android:layout_width="200dp"
        android:layout_height="200dp"
        />
    <TextView
        android:id="@+id/currentTempLabel"
        android:textColor="@android:color/black"
        android:text="@string/currentTemp"
        android:textStyle="bold"
        android:layout_width="186dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/currentTemp"
        android:layout_width="186dp"
        android:textSize="24sp"

        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/minTempLabel"
        android:textColor="@android:color/black"
        android:text="@string/minTemp"
        android:textStyle="bold"
        android:layout_width="186dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/minTemp"
        android:layout_width="104dp"
        android:textSize="24sp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/maxTempLabel"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/maxTemp"
        android:layout_width="186dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textSize="24sp"

        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="215dp"
        android:layout_height="39dp"
        android:visibility="invisible" />


</LinearLayout>